--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
 <body>
 
    <ul><center>
-       <li>Name:<p id="demo">SWATHI SURESH BHATKAL</p></li><br>
-       <li>Father Name:<p id="demo">SURESH BHATKAL</p></li><br>
-       <li>Mother Name:<p id="demo">SOUMYA SURESH BHATKAL</p> </li><br>
-       <li>Primary School:<p id="demo">M.H.P.S K.H.B COLONY,SIRSI(U.K)</p></li><br>
-       <li>Secondary School:<p id="demo">AVE MARIA HIGH SCHOOL ,SIRSI(U.K)</p></li><br>
-       <li>PUC:<p id="demo">M.E.S PU COLLEGE SIRSI(U.K)</p></li><br>
-       <li>Undergraduate:<p id="demo">THE OXFORD COLLEGE OF ENGINEERING,BANGALORE</p></li><br>
-       <li>Technical knowledge:<p id="demo">C,C++,JAVA,PHP,RUBY,HTML,JAVA SCRIPT,CSS</p></li><br></center>
+       <li>Name<p id="demo">SWATHI SURESH BHATKAL</p></li><br>
+       <li>Father Name<p id="demo">SURESH BHATKAL</p></li><br>
+       <li>Mother Name<p id="demo">SOUMYA SURESH BHATKAL</p> </li><br>
+       <li>Primary School<p id="demo">M.H.P.S K.H.B COLONY,SIRSI(U.K)</p></li><br>
+       <li>Secondary School<p id="demo">AVE MARIA HIGH SCHOOL ,SIRSI(U.K)</p></li><br>
+       <li>PUC<p id="demo">M.E.S PU COLLEGE SIRSI(U.K)</p></li><br>
+       <li>Undergraduate<p id="demo">THE OXFORD COLLEGE OF ENGINEERING,BANGALORE</p></li><br>
+       <li>Technical knowledge<p id="demo">C,C++,JAVA,PHP,RUBY,HTML,JAVA SCRIPT,CSS</p></li><br></center>
    </ul>
 
 </body>
