--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
 <body>
   <ul><center><br>
 
-  <li>Mobile:<p id="demo">9008491533 </p></li>
-   <li >Address:<p id="demo">kasturbanagar sirsi(u.k),581402</p> </li>
-  <li > Email:<p id="demo">swathisureshbhatkal@gmail.com</p></li></ul></center>
+  <li>Mobile<p id="demo">9008491533 </p></li>
+   <li >Address<p id="demo">kasturbanagar sirsi(u.k),581402</p> </li>
+  <li > Email<p id="demo">swathisureshbhatkal@gmail.com</p></li></ul></center>
     
 </body>
 </html>
